muchos cambios para a;adir los diagnosticos queda pendiente todo el protocolo eso va a dar dolor de cabeza